<resources>
    <string name="app_name">Covid-19 Checkup</string>
    <string name="start">Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="good_morning_fullname">Hello,</string>
    <string name="how_are_you_feeling_today">How Are You Feeling Today?</string>
    <string name="statistcs">Statistcs</string>
    <string name="statiscs_details">The coronavirus COVID-19 is affecting 223 countries and territories. The day is reset after midnight GMT+0. The list of countries and their regional classification is based on the United Nations Geoscheme.</string>
    <string name="show">Show</string>
    <string name="self_checker">Self-Checker</string>
    <string name="the_coronav">The Coronavirus Self-Checker is an interactive clinical assessment tool that will assist individuals ages 13 and older, and parents and caregivers of children ages 2 to 12 on deciding when to seek testing or medical care if they suspect they or someone they know has contracted COVID-19 or has come into close contact with someone who has COVID-19.</string>
    <string name="let_s_check_up">Let\'s Check Up</string>
    <string name="stay_at_home_nsave_yourself_and_the_world">Stay At Home!\nSave Yourself and the World.</string>
    <string name="stay_at_home_desc">Get the latest case data and updates, learn how to protect yourself and others and get advice on what to do next if you think you might have COVID-19.</string>
    <string name="symptoms">Symptoms</string>
    <string name="symptoms_desc">COVID-19 affects different people in different ways. Most people who develop it have mild to moderate symptoms and recover without hospitalization.</string>
    <string name="news">NEWS</string>
    <string name="how_covid_19_spread">How COVID-19 Spread</string>
    <string name="someone_sneezing_next_to_you">Someone Sneezing Next To You</string>
    <string name="the_truth_is">The truth is the virus can land on surfaces when someone coughs or sneezes, ” Dr. Saunders notes. “And if you touch that surface with your hands and then touch your eyes, mouth or nose, you can still contract the virus and become sick.</string>
    <string name="communicating_with">Communicating With An Infected \nPerson</string>
    <string name="contact_with">Contact With Surfaces Carrying\nThe Virus</string>
    <string name="result">Result</string>
    <string name="positive">Positive</string>
    <string name="cardviewresultdesc">You are a person at especially high risk from the new coronavirus.\nYou have symptoms that occur frequently with COVID-19.\nYou may have contracted the new coronavirus.</string>
    <string name="recommendation">Recommendation</string>
    <string name="the_fdh_recommends">The FOPH recommends that anyone experiencing these symptoms should have themselves tested.\nCall your doctor or chat with our doctors. Say that you are a person at especially high risk and thatyou have symptoms.</string>
    <string name="follow_the_ins">Follow the instructions given by the specialist you contacted.</string>
    <string name="stay_at_hom">Stay at home and avoid contact with other people until the test result is available (isolation).\nThat way you can avoid infecting other people.</string>
    <string name="t_t_thome_t_t_t">\t\t\tHome\t\t\t</string>
    <string name="call_doctor_t">Call Doctor\t</string>
    <string name="negative">Negative</string>
    <string name="you_have_none">You have none of the typical symptoms of COVID-19.\nkeep following the rules of hegiene and social distancing to protect yourself and others.</string>
    <string name="important_notice">Important Notice</string>
    <string name="the_coronavirus_checker">The coronavirus checker system is not a substitute for medical advice, diagnosis or treatment.\nThe symptoms described in the checker system may also occur in relation to other diseases requiring different measures.</string>
    <string name="always_consult_a_doctor">Always consult a doctor if you have obvious symptoms that get worse or worry you.</string>
    <string name="profile">Profile</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="age">Age:</string>
    <string name="age_number">Age Number</string>
    <string name="gender">Gender:</string>
    <string name="date_of_last_check">Date Of Last Check:</string>
    <string name="date">date</string>
    <string name="result_of_last_check">Result of last check:</string>
    <string name="symptoms_of_last_check">Symptoms of last check:</string>
    <string name="symptoms_1_symptoms_2">Symptoms 1, Symptoms 2</string>
    <string name="log_out">Log Out</string>
    <string name="tfe_od_app_name" translation_description="Object Detection demo app [CHAR_LIMIT=40]">TFL Detect</string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="call_doctor">Call Doctor</string>
    <string name="name_doctor">DR.Ahmed Elsayed</string>
    <string name="phone_doctor">+2012345678</string>
    <string name="questions_string_frist">Select all the symptoms \nyou currently have in this list</string>
    <string name="you_can_select">You can also select more than one symptom or tick the «No symptom» field.\nAt least one field must be selected.</string>
    <string name="checkbox">CheckBox</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="_1_of_3_answered">1 of 3 answered</string>
    <string name="plase_wear_a_mask_to_using_app">Please Wear A Mask To Use the Application</string>
<<<<<<< HEAD
    <string name="hoisptal_name">El Sheikh Zayed Al Nahyan Hospital</string>
    <string name="hoisptal_address">El-Nasr Rd, Al Abageyah, El Khalifa, Cairo Governorate</string>
    <string name="Hospitals">Hospitals</string>
=======
    <string name="change">Change</string>
>>>>>>> 158e3cd19c6624cb447d402b114528c2976086bf
</resources>