<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".result.ResultPositiveActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            app:cardBackgroundColor="#E9FAFF"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    style="@style/result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="16dp"
                    android:text="@string/result" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="16dp">

                    <View
                        android:id="@+id/vred"
                        android:layout_width="13dp"
                        android:layout_height="13dp"
                        android:layout_gravity="center"
                        android:background="@drawable/red_circle" />

                    <TextView
                        android:id="@+id/tvpositive"
                        style="@style/positive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/positive" />
                </LinearLayout>

                <TextView
                    style="@style/you_are_a_p"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/cardviewresultdesc" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/recommendat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/result_page_tv"
            android:paddingStart="12dp"
            android:paddingTop="5dp"
            android:paddingEnd="12dp"
            android:paddingBottom="5dp"
            android:text="@string/recommendation" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:paddingStart="32dp"
            android:paddingEnd="32dp">

            <View
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/red_circle" />

            <TextView
                style="@style/the_foph_re"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/the_fdh_recommends"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingStart="32dp"
            android:paddingEnd="32dp">

            <View
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/red_circle" />

            <TextView
                style="@style/the_foph_re"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/follow_the_ins"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingStart="32dp"
            android:paddingEnd="32dp">

            <View
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/red_circle" />

            <TextView
                style="@style/the_foph_re"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/stay_at_hom"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="32dp"
            android:paddingEnd="32dp">

            <TextView
                android:id="@+id/home_btn"
                style="@style/exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/home_button_result_page"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="@string/Hospitals" />

            <TextView
                android:id="@+id/call_doctor_btn"
                style="@style/call_doctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/call_doctor_result_page"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="@string/call_doctor_t" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>