<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".Fragments.ProfileFragment">

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/ly"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingEnd="32dp">

            <TextView
                style="@style/profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/profile" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

                <ImageView
                    android:id="@+id/iv_user"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:src="@drawable/profile_img"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_change"
                    style="@style/eslam_elmar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/change"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_user"
                    app:layout_constraintStart_toEndOf="@+id/iv_user" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_name"
                style="@style/eslam_elmar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center" />

            <TextView
                android:id="@+id/tv_phone"
                style="@style/some_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <TextView
                android:id="@+id/tv_email"
                style="@style/some_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <TextView
                style="@style/tvs_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/age" />

            <TextView
                android:id="@+id/tv_age"
                style="@style/tvs_data_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/tvs_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/gender" />

            <TextView
                android:id="@+id/tv_gender"
                style="@style/tvs_data_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/tvs_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/date_of_last_check" />

            <TextView
                android:id="@+id/tv_date"
                style="@style/tvs_data_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/tvs_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/result_of_last_check" />

            <TextView
                android:id="@+id/tv_result"
                style="@style/tvs_data_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/tvs_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/symptoms_of_last_check" />

            <TextView
                android:id="@+id/tv_symptoms"
                style="@style/tvs_data_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv">

        <TextView
            android:id="@+id/tv_logout"
            style="@style/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_6"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="32dp"
            android:paddingTop="8dp"
            android:paddingRight="32dp"
            android:paddingBottom="8dp"
            android:text="@string/log_out" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/pb"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#5B013140"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>